# cmd/docs/swagger.json
@@ -8,7 +8,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/order/checkout": {
+        "/orders/checkout": {
             "post": {
                 "security": [
                     {
@@ -65,7 +65,42 @@
                 }
             }
         },
-        "/product": {
+        "/products": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get Products",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Get Products",
+                "responses": {
+                    "200": {
+                        "description": "List of products",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.ProductSchema"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -116,7 +151,7 @@
                 }
             }
         },
-        "/product/{id}": {
+        "/products/{id}": {
             "get": {
                 "security": [
                     {
@@ -171,44 +206,7 @@
                 }
             }
         },
-        "/products": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Get Products",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Product"
-                ],
-                "summary": "Get Products",
-                "responses": {
-                    "200": {
-                        "description": "List of products",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.ProductSchema"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "internal server error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/login": {
+        "/users/login": {
             "post": {
                 "description": "Login",
                 "consumes": [
@@ -254,7 +252,7 @@
                 }
             }
         },
-        "/user/register": {
+        "/users/register": {
             "post": {
                 "description": "Register",
                 "consumes": [
